Bug 1306887 - keep SourceMap response header on CSS style sheets; r=bz,heycam

When loading a style sheet, if the SourceMap (or legacy X-SourceMap)
response header was seen, record it and make it available to chrome
scripts.

MozReview-Commit-ID: 3wtUADzgrI3

--HG--
extra : rebase_source : 25ed09e264d4b3a679ae970c709dedd4d50e2324